--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>HackDuke</title>
+  <title>Duke Blueprint</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Apply for HackDuke!"/>
+  <meta property="og:title" content="Apply for Duke Blueprint!"/>
   <meta property="og:image" content="https://www.hackduke.org/facebook-banner.png"/>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
