--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Apply for Duke Blueprint!"/>
-  <meta property="og:image" content="https://www.hackduke.org/facebook-banner.png"/>
+  <meta property="og:image" content="http://www.dukeblueprint.com/blueprint-logo.png"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
